engine/codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__completed_mcp_tool_call_multiple_outputs_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• Called
  └ search.find_docs({"query":"ratatui
        styling","limit":3})
    Found styling guidance in styles.md and
    additional notes in CONTRIBUTING.md.
    link: file:///docs/styles.md
