engine/codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__completed_mcp_tool_call_wrapped_outputs_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• Called
  └ metrics.get_nearby_metric({"query":"
        very_long_query_that_needs_wrapp
        ing_to_display_properly_in_the_h
        istory","limit":1})
    Line one of the response, which is
    quite long and needs wrapping.
    Line two continues the response with
    +1 line (⌃t to view transcript)
