engine/codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__cyber_policy_error_event_astra_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
ⓘ This content can’t be shown
  Daybreak isn’t available for Astra. Some cybersecurity requests may still be
  limited.
  Learn more: https://help.openai.com/en/articles/20001326
